[package]
name = "xelis-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.3", features = ["hazmat"] }
bytemuck = "1.15.0"
tiny-keccak = { version = "2.0", features = ["k12"] }