[package]
name = "xelis-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies
thiserror = "1.0.58"
aes = { version = "0.8.3", features = ["hazmat"] }
bytemuck = { version = "1.15.0", features = ["derive"] }

# v1 features
tiny-keccak = { version = "2.0", features = ["k12"], optional = true }

# v2 features
blake3 = { version = "1.5.1", optional = true }
chacha20 = { version = "0.9.1", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["v1", "v2"]
v1 = ["dep:tiny-keccak"]
v2 = ["dep:blake3", "dep:chacha20"]


[profile.dev]
opt-level = 3
overflow-checks = false
